--- a/wp-content/themes/global-traveler/css/style.scss
+++ b/wp-content/themes/global-traveler/css/style.scss
@@ -14,7 +14,7 @@
 	&.fade {
 		&.in {
 			@include opacity(1);
-			z-index: 9;
+			z-index: 9999;
 		}
 	}
 }
