--- a/wp-content/themes/global-traveler/css/trazeetravel.css
+++ b/wp-content/themes/global-traveler/css/trazeetravel.css
@@ -8828,7 +8828,7 @@ body.page #main-content #content .content a {
     -moz-opacity: 1;
     opacity: 1;
     filter: alpha(opacity=100) progid:DXImageTransform.Microsoft.Alpha(opacity=$msopacity);
-    z-index: 9; }
+    z-index: 9999; }
 
 .full-width {
   clear: both; }
